--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <li> <a href="practice.html">practice</a> </li>
     <li> <a href="project1.html">mini-project</a> </li>
 <li> <a href="lab1.html">aurora Borealis</a> </li>
-<li><a href="project2/prj2.html">project2</a></li>
-        <li><a href="prj3">project3</a></li>
+<li> <a href="project2/prj2.html">project2</a> </li>
+        <li> <a href="prj3">project3</a> </li>
+        <li> <a href= "">My Unity Project</a> </li>
     </ul>
     </nav>
     <hr>
