--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="Stephanie.png" type="image/png">
 </head>
 <body>
+    <background-color: lightpink;>
     <header> 
         <h1>Welcome To My Sophmore Portfolio!</h1>
     </header>
