changing background color again color correcting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Sophmore Portfolio</title>
     <!-- Favicon -->
     <link rel="icon" href="Stephanie.png" type="image/png">
+
+     <style>
+        body {
+            background-color: #lightblue
+        }
+    </style>
 </head>
 <body>
     <background-color: lightpink;>
